--- a/Census-APIs-notebook.ipynb
+++ b/Census-APIs-notebook.ipynb
@@ -984,6 +984,8 @@
     "\n",
     "After that, just write the file to the directory.  The variable <span style=\"color:red\">ny_poverty_county</span> contains all the data we want to export, so we will replace \"gpd\" with \"ny_poverty_county\" to get <span style=\"color:red\">ny_poverty_county.to_file</span>.  NOTE: I needed to use the <span style=\"color:red\">encoding='utf-8'</span> parameter.  I've not seen this in all code samples, so be aware that you might need this as well.\n",
     "\n",
+    "Shapefile is the default output, but you can set other outputs. You need to be careful when changing the default output type--they require different levels of finesse to get them to work correctly.  Below are some examples. When exporting to GeoJSON, the file extension changed to <b>.json</b>, and the parameter <span style="color:red">driver='GeoJSON'</span> was included.  However, when exporting to csv, <span style="color:red">ny_poverty_county.to_file()</span> changed to <span style="color:red">ny_poverty_county.to_csv()</span>.  Also note that in the <b>csv</b> example below, the geometry was removed using the <span style="color:red">drop</span> function.\n"
+    "\n",
     "### <span style=\"color:green\">Note: You will need to add a directory location to get this to work.  I've removed mine below.</span>"
    ]
   },
@@ -1013,11 +1015,29 @@
     "# Create a output path for the data\n",
     "# Write data to shapefile\n",
     "\n",
-    "try:\n",
-    "    ny_poverty_county.to_file(r\"\\\\Enter your directory and shapefile location here\", encoding='utf-8')\n",
-    "    print(\"File successfully written to directory\")\n",
-    "except OSError as error:\n",
-    "    print (\"File cannot be written to directory\")\n"
+   "try:\n",
+   "     ny_poverty_county.to_file(r"\\insert\your\directory\here.shp", encoding='utf-8')\n",
+   "     print("Shapefile successfully written to directory")\n",
+   "except OSError as error:\n",
+   "     print ("Shapefile cannot be written to directory")\n",
+   "\n",
+   "# Write data to topojson\n",
+    "\n",
+   "try:\n",
+   "     ny_poverty_county.to_file(r"\\insert\your\directory\here.json", driver='GeoJSON', encoding='utf-8')\n",
+   "     print("GeoJson file successfully written to directory")\n",
+   "except OSError as error:\n",
+   "     print ("GeoJson file cannot be written to directory")\n",
+    "\n",
+   "# Write data to csv\n",
+    "\n",
+   "try:\n",
+   "     ny_poverty_county.drop('geometry',axis=1).to_csv(r"\\insert\your\directory\here.csv", encoding='utf-8')\n",   
+   "     print("CSV successfully written to directory")\n",
+   "except OSError as error:\n",
+   "     print ("CSV cannot be written to directory")\n",
+
+   
    ]
   },
   {
